sample/hello-kubernetes-java-mvn/deploy/hello-stream.yml
apiVersion: "apps/v1beta2"
kind: Deployment
metadata:
  name: "hello-stream"
  labels:
    appName: "hello-stream"
spec:
  replicas: 3
  selector:
    matchLabels:
      appName: "hello-stream"

  #update
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate

  template:
    metadata:
      labels:
        appName: "hello-stream"
    spec:
      restartPolicy: Always
      containers:
        - name: hello-stream
          image: "stream-impl:1.0-SNAPSHOT"
          imagePullPolicy: IfNotPresent
          readinessProbe:
            httpGet:
              path: "/status/ready"
              port: management
            periodSeconds: 10
            initialDelaySeconds: 180
          livenessProbe:
            httpGet:
              path: "/status/alive"
              port: management
            periodSeconds: 10
            initialDelaySeconds: 120
          ports:
            - containerPort: 9000
              name: http
            - containerPort: 2552
              name: remoting
            - containerPort: 8558
              name: management
          volumeMounts: []

          resources:
            limits:
              cpu: 0.15
              memory: 512Mi
            requests:
              cpu: 0.15
              memory: 512Mi
      volumes: []

---
#headless
apiVersion: v1
kind: Service
metadata:
  labels:
    appName: "hello-stream"
  annotations:
    service.alpha.kubernetes.io/tolerate-unready-endpoints: "true"
  name: "hello-stream-internal"
spec:
  ports:
  - name: management
    port: 8558
    protocol: TCP
    targetPort: 8558
  - name: remoting
    port: 2552
    protocol: TCP
    targetPort: 2552
  selector:
    appName: "hello-stream"
  clusterIP: None
  publishNotReadyAddresses: true
#headless
---

apiVersion: v1
kind: Service
metadata:
  labels:
    appName: hello-stream
  name: hello-stream
spec:
  ports:
    - name: http
      port: 9000
      protocol: TCP
      targetPort: 9000
    - name: management
      port: 8558
      protocol: TCP
      targetPort: 8558
  selector:
    appName: hello-stream
  type: LoadBalancer
