sample/hello-kubernetes-java-mvn/deploy/ingress.yml
apiVersion: "extensions/v1beta1"
kind: Ingress
metadata:
  name: hello
spec:
  rules:
    - http:
        paths:
          - path: "/api/hello"
            backend:
              serviceName: "hello"
              servicePort: 9000
          - path: "/direct-stream"
            backend:
              serviceName: "hello-stream"
              servicePort: 9000
          - path: "/auto-stream"
            backend:
              serviceName: "hello-stream"
              servicePort: 9000
          - path: "/api/helloProxy"
            backend:
              serviceName: "hello-stream"
              servicePort: 9000
          - path: "/api/locate"
            backend:
              serviceName: "hello-stream"
              servicePort: 9000
